--- a/TraversalCoreProje/Views/Login/SingUp.cshtml
+++ b/TraversalCoreProje/Views/Login/SingUp.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TraversalCoreProje.Models.UserRegisterViewModel
+
 @{
     Layout = null;
 }
@@ -11,17 +12,12 @@ Author URL: http://w3layouts.com
 <html lang="zxx">
 
 <head>
-    <title>Traversal Kayıt Ekranı</title>
+    <title>Traversal Misafir Kayıt Ekranı</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <meta name="keywords"
           content="Invent Signup Form Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-    <!--/Style-CSS -->
-    <link rel="stylesheet" href="~/web/css/style.css" type="text/css" media="all" />
-    <!--//Style-CSS -->
-    <!-- ICON -->
-    <link rel="icon" type="image/png" href="~/web/images/register_icon.png" />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -32,8 +28,10 @@ Author URL: http://w3layouts.com
         }
     </script>
     <!-- //Meta tag Keywords -->
-
-
+    <!--/Style-CSS -->
+    <link rel="stylesheet" href="~/web/css/style.css" type="text/css" media="all" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--//Style-CSS -->
 </head>
 
 <body>
@@ -45,14 +43,11 @@ Author URL: http://w3layouts.com
                     <div class="overlay">
                         <div class="grid-info-form">
                             <h5>Traversal Rezervasyon</h5>
-                            <h3>Hesap Oluşturun</h3>
+                            <h3>HESAP OLUŞTURUN </h3>
                             <p>
-                                Birbirinden deneyimli rehberlerimiz eşliğinde İskandinav ülkelerinin
-                                soğuğunu, Akdeniz ülkelerinin sıcaklığını, güzel ülkemizin Kapadokya'dan
-                                Sürmene'ye, Ölüdeniz'den Asos'a, Balkan turundan Mısır Çöllerine kadar aklınıza
-                                gelen her yere bir tık uzaktayız. Seyahatlerimize katılmak için hemen kayıt olun...
+                                Birbirinden deneyimli rehberlerimiz eşliğinde İskandinav ülkelerinin soğuğunu, Akdeniz ülkelerinin sıcaklığını, güzel ülkemizin Kapadokya'dan Sürmene'ye, Ölüdeniz'den Asos'a, Balkan turundan Mısır çöllerine kadar aklınıza gelen her yere bir tık uzaktayız. Seyahatlerimize katılmak için hemen kayıt olun...
                             </p>
-                            <a href="/Login/SignIn/" class="read-more-1 btn">Hadi başlayalım</a>
+                            <a href="index.html" class="read-more-1 btn">Hadi Başlayalım!</a>
                         </div>
 
                     </div>
@@ -60,61 +55,57 @@ Author URL: http://w3layouts.com
                 <div class="form-left">
                     <div class="middle">
                         <h4>Bize Katılın</h4>
-                        <p>Hemen ücretsiz hesap oluştur.</p>
+                        <p>Hemen ücretsiz hesap oluşturun</p>
                     </div>
                     <form method="post" class="signin-form">
                         <div class="form-input">
-                            <label>Adınız</label>
+                            <label>İsim :</label>
                             <input type="text" asp-for="Name" />
-                            <span asp-validation-for="Name" class="text-danger" style="color:  #ff0000;"></span> @* HATA MESAJLARI *@
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-input">
-                            <label>Soyadınız</label>
+                            <label>Soyisim :</label>
                             <input type="text" asp-for="Surname" />
-                            <span asp-validation-for="Surname" class="text-danger" style="color:  #ff0000;"></span>
+                            <span asp-validation-for="Surname" class="text-danger"></span>
                         </div>
                         <div class="form-input">
-                            <label>Kullanıcı Adınız</label>
+                            <label>Kullanıcı Adı :</label>
                             <input type="text" asp-for="UserName" />
-                            <span asp-validation-for="UserName" class="text-danger" style="color:  #ff0000;"></span>
+                            <span asp-validation-for="UserName" class="text-danger"></span>
                         </div>
                         <div class="form-input">
-                            <label>Mailiniz</label>
+                            <label>E-Posta :</label>
                             <input type="email" asp-for="Mail" />
-                            <span asp-validation-for="Mail" class="text-danger" style="color:  #ff0000;"></span>
+                            <span asp-validation-for="Mail" class="text-danger"></span>
                         </div>
                         <div class="form-input">
-                            <label>Şifreniz</label>
-                            <input type="password" asp-for="Password" required="required" />
-                            <span asp-validation-for="Password" class="text-danger" style="color:  #ff0000;"></span>
+                            <label>Şifre :</label>
+                            <input type="password" asp-for="Password" required />
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="form-input">
-                            <label>Şifre Tekrar</label>
+                            <label>Şifre Tekrar :</label>
                             <input type="password" asp-for="ConfirmPassword" />
-                            <span asp-validation-for="ConfirmPassword" class="text-danger" style="color:  #ff0000;"></span>
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
                         <div class="text-danger" asp-validation-summary="ModelOnly">
-
-
                         </div>
 
                         <label class="container">
-                            Şartları okudum <a href="#">Kabul ediyorum</a>
+                            <a href="#">Şartları okudum</a>,kabul ediyorum.
                             <input type="checkbox">
                             <span class="checkmark"></span>
                         </label>
-                        <button class="btn">Kayıt Ol</button>
+                        <button class="btn">Kayıt ol!</button>
                     </form>
                     <div class="copy-right text-center">
                         <p>
-                            © @DateTime.Now.Year Traversal. Tüm hakları saklıdır. | Design by
-                            <a href="http://w3layouts.com/" target="_blank">W3layouts</a>
+                            © @DateTime.Now.Year. Tüm hakları saklıdır. | Design by
+                            <a href="http://w3layouts.com/" target="_blank"></a>
                         </p>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </section>
     <!-- //login-section -->
